--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,13 +60,12 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.45f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MusicManager.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\LaneSwitcher.cs" />
-    <Compile Include="Assets\Scripts\Background.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
     <Compile Include="Assets\Scripts\LaneSpawner.cs" />
-    <Compile Include="Assets\Scripts\SimAnimation.cs" />
     <Compile Include="Assets\Scripts\UiScript\ButtonAnimator.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
